--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href=""style="--i:9" target="_blank"><i class='bx bxl-youtube'></i></a>
                     <a href="https://github.com/nagarjun8742"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="https://docs.google.com/document/d/1iq0FGSYESyteykHW4pm7CbFWHzbNPI0W/edit?rtpof=true&tab=t.0" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://docs.google.com/document/d/1T0fUcAzmXAMKmYB4X0Z3KnW6PviOg6s9aAt3WtoxXQI/edit?tab=t.0" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
