--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         I learnt has helped me develop.I am currently seeking roles
                         where I can utilize my experience and skill.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1h4j9kN7Qi_cYihSt3bvxKqyOSUKdXD84/view" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a https://drive.google.com/drive/u/0/folders/1EULKUn_-Ee89kXBGwD4kUx3wNBreyNWp/view" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
